fix(style): tweak templates and style for readability

--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -2,15 +2,8 @@
 @use 'node_modules/highlight.js/scss/solarized-light.scss';
 
 body {
-  margin: 1em;
-
-  @media (min-width: 600px) {
-    margin: 1em 10% 1em 10%;
-  }
-
-  @media (min-width: 900px) {
-    margin: 1em 15% 1em 15%;
-  }
+  width: 90vw;
+  margin: auto;
 }
 
 header nav time {
@@ -175,12 +168,13 @@ ul.menu-list {
   list-style-type: none;
 }
 
-.article {
+.container {
   z-index: 0;
-  margin-top: 60px;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+  margin: 60px auto 40px auto;
   max-width: 900px;
 }
 
+.article {
+  max-width: 750px;
+  margin: auto;
+}
